<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="406dp"
        android:layout_height="726dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".InputActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="405dp"
                android:layout_height="156dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="44dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/image_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/button_color"
                android:text="@string/image_choice"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_date"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_date"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_food"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_name"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_kcal"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_kcal"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_count"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_count"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_eattime"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_time"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_review"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/blue_line"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/hint_review"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:paddingStart="15px"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint = "음식점 위치"
                    android:textSize="20dp"/>

                <Button
                    android:id="@+id/MapBtn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/button_color"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="지도보기" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/button_color"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/input_save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>